RESOLVED FIXED213565
REGRESSION(r262341) Use UTF-8 to decode CFURLRefs from IPC
https://bugs.webkit.org/show_bug.cgi?id=213565
Summary REGRESSION(r262341) Use UTF-8 to decode CFURLRefs from IPC
Alex Christensen
Reported 2020-06-24 10:03:24 PDT
REGRESSION(r262341) Use UTF-8 to decode CFURLRefs from IPC
Attachments
Patch (3.01 KB, patch)
2020-06-24 10:05 PDT, Alex Christensen
no flags
Patch (5.41 KB, patch)
2020-06-24 13:40 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2020-06-24 10:05:46 PDT
Alex Christensen
Comment 2 2020-06-24 10:05:48 PDT
Yusuke Suzuki
Comment 3 2020-06-24 10:48:12 PDT
Comment on attachment 402660 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402660&action=review Cool! > LayoutTests/fast/url/navigate-non-ascii.html:2 > +location.assign('//\u2000'); Can we have a test in TestWTF too? The reason is that it is possible that we add URL validation check in `location.assign` since it is specified in the spec. https://html.spec.whatwg.org/multipage/history.html#dom-location-assign "Parse url relative to the entry settings object. If that failed, throw a "SyntaxError" DOMException." If it is added, this test becomes one which does not stress ArgumentCodersCF.
Darin Adler
Comment 4 2020-06-24 10:52:04 PDT
Comment on attachment 402660 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402660&action=review r=me but please do improve the test coverage >> LayoutTests/fast/url/navigate-non-ascii.html:2 >> +location.assign('//\u2000'); > > Can we have a test in TestWTF too? The reason is that it is possible that we add URL validation check in `location.assign` since it is specified in the spec. > https://html.spec.whatwg.org/multipage/history.html#dom-location-assign > "Parse url relative to the entry settings object. If that failed, throw a "SyntaxError" DOMException." > > If it is added, this test becomes one which does not stress ArgumentCodersCF. I agree that we need a more durable test that will exercise the code path even if we fix location assignment. Not as sure as Yusuke that a test written in C++ in TestWTF is the best option. Are there other ways to exercise this?
Alex Christensen
Comment 5 2020-06-24 13:40:34 PDT
Alex Christensen
Comment 6 2020-06-24 13:42:11 PDT
Comment on attachment 402680 [details] Patch I added an API test that would terminate the web process before this change, and fails to load an invalid url after this change.
EWS
Comment 7 2020-06-24 14:20:03 PDT
Committed r263475: <https://trac.webkit.org/changeset/263475> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402680 [details].
Note You need to log in before you can comment on or make changes to this bug.