REGRESSION(r262341) Use UTF-8 to decode CFURLRefs from IPC https://bugs.webkit.org/show_bug.cgi?id=213565 Source/WebKit:

<rdar://problem/64408924>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-06-24
Reviewed by Darin Adler.

My assumption that all valid CFURLRefs are ASCII was incorrect.
Some of them are UTF-8 encoded non-ASCII.
Using kCFStringEncodingUTF8 covers both.

Test: fast/url/navigate-non-ascii.html

* Shared/cf/ArgumentCodersCF.cpp:
(IPC::decode):

Tools:

<rdar://problem/64408924>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-06-24
Reviewed by Darin Adler.

* TestWebKitAPI/Tests/WebKitCocoa/LoadInvalidURLRequest.mm:
(TestWebKitAPI::TEST):

LayoutTests:

Patch by Alex Christensen <achristensen@webkit.org> on 2020-06-24
Reviewed by Darin Adler.

* fast/url/navigate-non-ascii-expected.txt: Added.
* fast/url/navigate-non-ascii.html: Added.

Canonical link: https://commits.webkit.org/226368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263475 268f45cc-cd09-0410-ab3c-d52691b4dbfc